# anonymize-pii

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: docs.yaml
data/raw/: Reports.json
src/anonymize_pii/: anonymizers.py  config.py  helpers.py  main.py  parsing.py  person_relations.py
tests/: test_json_reports.json  test_multi_column_data.csv  test_single_column_reports.csv
