[project]
name = "anonymize-pii"
version = "0.1.0"
description = "PII anonymization pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "blis==1.3.3",
    "catalogue==2.0.10",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "cloudpathlib==0.23.0",
    "coloredlogs==15.0.1",
    "confection==0.1.5",
    "cryptography==44.0.3",
    "cymem==2.0.13",
    "emoji==2.15.0",
    "en-core-web-lg",
    "en-core-web-sm",
    "filelock==3.20.1",
    "flatbuffers==25.12.19",
    "fsspec==2025.12.0",
    "gliner==0.2.24",
    "headhunter",
    "hf-xet==1.2.0",
    "huggingface-hub==0.36.0",
    "humanfriendly==10.0",
    "idna==3.11",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "mpmath==1.3.0",
    "murmurhash==1.0.15",
    "networkx==3.6.1",
    "numpy==2.4.3",
    "onnxruntime==1.23.2",
    "packaging==25.0",
    "phonenumbers==9.0.21",
    "preshed==3.0.12",
    "presidio-analyzer==2.2.360",
    "presidio-anonymizer==2.2.360",
    "protobuf==6.33.2",
    "pycparser==2.23",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pyyaml==6.0.3",
    "regex==2025.11.3",
    "requests==2.32.5",
    "requests-file==3.0.1",
    "safetensors==0.7.0",
    "sentencepiece==0.2.1",
    "smart-open==7.5.0",
    "spacy==3.8.11",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "srsly==2.5.2",
    "stanza==1.11.0",
    "sympy==1.14.0",
    "thinc==8.3.10",
    "tldextract==5.3.0",
    "tokenizers==0.22.1",
    "torch==2.9.1",
    "tqdm==4.67.1",
    "transformers==4.57.3",
    "typer-slim==0.21.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.2",
    "wasabi==1.1.3",
    "weasel==0.4.3",
    "wrapt==2.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.uv.sources]
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl" }
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
headhunter = { git = "https://github.com/childmindresearch/headhunter" }

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
